--- a/app/pages/lp.pug
+++ b/app/pages/lp.pug
@@ -8,55 +8,55 @@ block content
         +b.lp
             +e.content
                 +e.logo
-                //- +e.title МЫ В СОЦИАЛЬНЫХ СЕТЯХ
-                //- .row.social-icon-grup
-                //-     .col.col_size_12.col_size-xs_6 
-                //-         a(href="https://vk.com/bkinvent").social-icon
-                //-             img(src='/images/vk.png').social-icon__img 
-                //-             .social-icon__text ВКонтакте 
-                //-     .col.col_size_12.col_size-xs_6
-                //-         a(href="").social-icon
-                //-             img(src='/images/fb.png').social-icon__img 
-                //-             .social-icon__text Facebook 
-                //-     .col.col_size_12.col_size-xs_6
-                //-         a(href="https://ok.ru/bkinvent").social-icon
-                //-             img(src='/images/ok.png').social-icon__img 
-                //-             .social-icon__text OK.ru 
-                //-     .col.col_size_12.col_size-xs_6 
-                //-         a(href="").social-icon
-                //-             img(src='/images/instagram.png').social-icon__img 
-                //-             .social-icon__text Instagram
-
-                //- br
-                //- br
-                //- br
-                +e.title ОСТАВЬТЕ СВОЙ ОТЗЫВ О НАШЕЙ РАБОТЕ
+                +e.title МЫ В СОЦИАЛЬНЫХ СЕТЯХ
                 .row.social-icon-grup
-                    .col.col_size_12.col_size-xs_6
-                        a(href="https://g.page/bk_invent/review?rc" target="_blank").social-icon
-                            img(src='/images/googlemaps.png').social-icon__img 
-                            .social-icon__text Google Карты
-                        br
-                        a(href="https://yandex.ru/profile/11684848910?intent=reviews" target="_blank").social-icon
-                            img(src='/images/yandexmaps.png').social-icon__img 
-                            .social-icon__text Яндекс.Карты
-                        br
-                        a(href="https://2gis.ru/rostov/firm/70000001028462470/39.717044%2C47.214475/tab/reviews?writeReview" target="_blank").social-icon
-                            img(src='/images/2gis.png').social-icon__img 
-                            .social-icon__text 2ГИС
+                    .col.col_size_12.col_size-xs_4
+                        a(href="https://vk.com/bkinvent").social-icon
+                            img(src='/images/vk.png').social-icon__img 
+                            .social-icon__text VK.com 
+                    //- .col.col_size_12.col_size-xs_6
+                    //-     a(href="").social-icon
+                    //-         img(src='/images/fb.png').social-icon__img 
+                    //-         .social-icon__text Facebook 
+                    .col.col_size_12.col_size-xs_4
+                        a(href="https://ok.ru/bkinvent").social-icon
+                            img(src='/images/ok.png').social-icon__img 
+                            .social-icon__text OK.ru 
+                    .col.col_size_12.col_size-xs_4 
+                        a(href="").social-icon
+                            img(src='/images/instagram.png').social-icon__img 
+                            .social-icon__text Instagram
 
-                    .col.col_size_12.col_size-xs_6
-                        a(href="https://www.yell.ru/rostov-na-donu/com/ooo-bk-invent_11900346/" target="_blank").social-icon
-                            img(src='/images/yell.png').social-icon__img 
-                            .social-icon__text Yell
-                        br
-                        a(href="https://rostov.flamp.ru/firm/bk_invent_ooo-70000001028462470#reviews" target="_blank").social-icon
-                            img(src='/images/flamp.png').social-icon__img 
-                            .social-icon__text Flamp
-                        br
-                        a(href="https://rostov.zoon.ru/building/bk_invent/" target="_blank").social-icon
-                            img(src='/images/zoon.png').social-icon__img 
-                            .social-icon__text Zoon
+                //- br
+                //- br
+                //- br
+                //- +e.title ОСТАВЬТЕ СВОЙ ОТЗЫВ О НАШЕЙ РАБОТЕ
+                //- .row.social-icon-grup
+                //-     .col.col_size_12.col_size-xs_6
+                //-         a(href="https://g.page/bk_invent/review?rc" target="_blank").social-icon
+                //-             img(src='/images/googlemaps.png').social-icon__img 
+                //-             .social-icon__text Google Карты
+                //-         br
+                //-         a(href="https://yandex.ru/profile/11684848910?intent=reviews" target="_blank").social-icon
+                //-             img(src='/images/yandexmaps.png').social-icon__img 
+                //-             .social-icon__text Яндекс.Карты
+                //-         br
+                //-         a(href="https://2gis.ru/rostov/firm/70000001028462470/39.717044%2C47.214475/tab/reviews?writeReview" target="_blank").social-icon
+                //-             img(src='/images/2gis.png').social-icon__img 
+                //-             .social-icon__text 2ГИС
+
+                //-     .col.col_size_12.col_size-xs_6
+                //-         a(href="https://www.yell.ru/rostov-na-donu/com/ooo-bk-invent_11900346/" target="_blank").social-icon
+                //-             img(src='/images/yell.png').social-icon__img 
+                //-             .social-icon__text Yell
+                //-         br
+                //-         a(href="https://rostov.flamp.ru/firm/bk_invent_ooo-70000001028462470#reviews" target="_blank").social-icon
+                //-             img(src='/images/flamp.png').social-icon__img 
+                //-             .social-icon__text Flamp
+                //-         br
+                //-         a(href="https://rostov.zoon.ru/building/bk_invent/" target="_blank").social-icon
+                //-             img(src='/images/zoon.png').social-icon__img 
+                //-             .social-icon__text Zoon
 
 
     //+scripts(['common.js', 'app.js'])
