--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -472,6 +472,10 @@ block content
             //- +b.btn.btn_view_pseudo
             //-     +e.text Записаться на консультацию
             
+
+        
+
+
             +b.process
                 +e.bg(style="background: url(images/process-bg.png);")
                 +e.item(style="left: 500px;top: -28px;")
@@ -501,6 +505,44 @@ block content
 
             .content
                 .container
+                    +b.cases.cases__light
+                        +e.wrapper
+                            .cases__next
+                            .cases__prev
+                            +e.items
+                                +e.item
+                                    +e.body
+                                        .row
+                                            .col.col_size_12.col_size-sm_6
+                                                img(src="https://bk-invent.ru/images/presentation/7_3.jpg")
+                                            .col.col_size_12.col_size-sm_6
+                                                img(src="https://bk-invent.ru/images/presentation/7_4.jpg")
+                                +e.item
+                                    +e.body
+                                        .row
+                                            .col.col_size_12.col_size-sm_6
+                                                img(src="https://bk-invent.ru/images/presentation/7_5.jpg")
+                                            .col.col_size_12.col_size-sm_6
+                                                img(src="https://bk-invent.ru/images/presentation/7_6.jpg")
+
+                    +b.cases.cases__light
+                        +e.wrapper
+                            .cases__next
+                            .cases__prev
+                            +e.items
+                                +e.item
+                                    +e.body
+                                        .row
+                                            .col.col_size_12
+                                                img(src="https://bk-invent.ru/images/presentation/7_3.jpg")
+                                +e.item
+                                    +e.body
+                                        .row
+                                            .col.col_size_12
+                                                img(src="https://bk-invent.ru/images/presentation/7_5.jpg")
+
+
+
                     .table
                         .table__wrapper
                             table
