--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -2363,10 +2363,13 @@ ul.list
 .cases
     // border 1px solid #ddd
     //box-shadow 0 4px 8px 5px rgba(207, 207, 207, 0.34)
+   
     width 100%
     margin-bottom 40px
     border-radius 5px
     background linear-gradient(100deg, rgba(238, 238, 238, 1) 0%, rgba(238, 238, 238, 1) 50%, rgba(205, 219, 247, 1) 50%, rgba(205, 219, 247, 1) 100%)
+    &__light
+        background #fff;
     &__wrapper
         position relative
         .bx-prev
