--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -505,41 +505,81 @@ block content
 
             .content
                 .container
-                    +b.cases.cases__light
-                        +e.wrapper
-                            .cases__next
-                            .cases__prev
-                            +e.items
-                                +e.item
-                                    +e.body
-                                        .row
-                                            .col.col_size_12.col_size-sm_6
-                                                img(src="https://bk-invent.ru/images/presentation/7_3.jpg")
-                                            .col.col_size_12.col_size-sm_6
-                                                img(src="https://bk-invent.ru/images/presentation/7_4.jpg")
-                                +e.item
-                                    +e.body
-                                        .row
-                                            .col.col_size_12.col_size-sm_6
-                                                img(src="https://bk-invent.ru/images/presentation/7_5.jpg")
-                                            .col.col_size_12.col_size-sm_6
-                                                img(src="https://bk-invent.ru/images/presentation/7_6.jpg")
 
-                    +b.cases.cases__light
+                    +b.cases.cases__presentation
                         +e.wrapper
                             .cases__next
                             .cases__prev
                             +e.items
                                 +e.item
                                     +e.body
-                                        .row
-                                            .col.col_size_12
-                                                img(src="https://bk-invent.ru/images/presentation/7_3.jpg")
+                                        img(data-src="https://bk-invent.ru/images/presentation/0.jpg")
                                 +e.item
                                     +e.body
-                                        .row
-                                            .col.col_size_12
-                                                img(src="https://bk-invent.ru/images/presentation/7_5.jpg")
+                                        img(data-src="https://bk-invent.ru/images/presentation/1.jpg")
+                                +e.item
+                                    +e.body
+                                        img(data-src="https://bk-invent.ru/images/presentation/2.jpg")
+                                +e.item
+                                    +e.body
+                                        img(data-src="https://bk-invent.ru/images/presentation/3.jpg")
+                                +e.item
+                                    +e.body
+                                        img(data-src="https://bk-invent.ru/images/presentation/4.jpg")
+                                +e.item
+                                    +e.body
+                                        img(data-src="https://bk-invent.ru/images/presentation/5.jpg")
+                                +e.item
+                                    +e.body
+                                        img(data-src="https://bk-invent.ru/images/presentation/6.jpg")
+                                +e.item
+                                    +e.body
+                                        img(data-src="https://bk-invent.ru/images/presentation/7.jpg")
+                                +e.item
+                                    +e.body
+                                        img(data-src="https://bk-invent.ru/images/presentation/8.jpg")
+                                +e.item
+                                    +e.body
+                                        img(data-src="https://bk-invent.ru/images/presentation/9_1.jpg")
+                                +e.item
+                                    +e.body
+                                        img(data-src="https://bk-invent.ru/images/presentation/9_2.jpg")
+                                +e.item
+                                    +e.body
+                                        img(data-src="https://bk-invent.ru/images/presentation/9_3.jpg")
+                                +e.item
+                                    +e.body
+                                        img(data-src="https://bk-invent.ru/images/presentation/9_4.jpg")
+                                +e.item
+                                    +e.body
+                                        img(data-src="https://bk-invent.ru/images/presentation/9_5.jpg")
+                                +e.item
+                                    +e.body
+                                        img(data-src="https://bk-invent.ru/images/presentation/9_6.jpg")
+                                +e.item
+                                    +e.body
+                                        img(data-src="https://bk-invent.ru/images/presentation/9_7.jpg")
+                                +e.item
+                                    +e.body
+                                        img(data-src="https://bk-invent.ru/images/presentation/9_8.jpg")
+                                +e.item
+                                    +e.body
+                                        img(data-src="https://bk-invent.ru/images/presentation/9_9.jpg")
+                                +e.item
+                                    +e.body
+                                        img(data-src="https://bk-invent.ru/images/presentation/9_10.jpg")
+                                +e.item
+                                    +e.body
+                                        img(data-src="https://bk-invent.ru/images/presentation/10.jpg")
+                                +e.item
+                                    +e.body
+                                        img(data-src="https://bk-invent.ru/images/presentation/11.jpg")
+                                +e.item
+                                    +e.body
+                                        img(data-src="https://bk-invent.ru/images/presentation/12.jpg")
+                                +e.item
+                                    +e.body
+                                        img(data-src="https://bk-invent.ru/images/presentation/13.jpg")
 
 
 
