--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -67,6 +67,10 @@ block content
                             +e.wrap
                                 +e.icon 
                                 +e.text.dynamic-phone 8 (863) 303-38-33
+                        +b({tag: 'a'})( href="https://api.whatsapp.com/send?phone=79614270609", target="_blank").whatsapp
+                            +e.wrap
+                                +e.icon
+                                +e.text Напишите нам в WhatsApp
                         +b.maps
                             +e.wrap
                                 +e.icon 
