--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -573,6 +573,40 @@
         text-decoration none
         @media (min-width 390px)
             font-size 18px
+
+.whatsapp
+    display block
+    width max-content
+    margin-top 5px
+    cursor pointer
+    text-decoration none
+    &__wrap
+        display flex
+        align-items center
+        background-color rgb(225, 239, 208)
+        padding 3px 4px 
+        border-radius 4px
+    //margin-bottom 10px
+    &__icon
+        width 15px
+        height 15px
+        background-image url(../images/whatsapp.svg)
+        background-repeat no-repeat
+        background-size contain
+        margin 0 4px 0 0
+        // @media (min-width 390px)
+        //     margin 0 10px 0 0
+    &__text
+        display inline-block
+        color #000
+        font-size 13px
+        line-height 1em 
+        font-weight 500
+        text-decoration none
+        // @media (min-width 390px)
+        //     font-size 14px
+
+
 .maps
     display none
     margin-top 5px
