--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -72,6 +72,7 @@
             display block
     &__right
         width max-content 
+        //text-align right
         @media (min-width 1160px)
             size(2)
         margin auto 0
@@ -324,6 +325,9 @@
         .arrow
             margin 3px 0 0 6px
             display inline-block
+    &__item-full-width
+        display block
+        text-align right
     &__link
         display flex
         align-items center
@@ -538,7 +542,7 @@
         font-weight 600
 
 .phone
-    display block
+    display inline-block
     width max-content
     &__wrap
         display flex
@@ -574,37 +578,78 @@
         @media (min-width 390px)
             font-size 18px
 
-.whatsapp
+.messengers
+    text-align center
     display block
     width max-content
-    margin-top 5px
-    cursor pointer
-    text-decoration none
-    &__wrap
-        display flex
-        align-items center
-        background-color rgb(225, 239, 208)
-        padding 3px 4px 
-        border-radius 4px
-    //margin-bottom 10px
-    &__icon
-        width 15px
-        height 15px
-        background-image url(../images/whatsapp.svg)
-        background-repeat no-repeat
-        background-size contain
-        margin 0 4px 0 0
-        // @media (min-width 390px)
-        //     margin 0 10px 0 0
-    &__text
-        display inline-block
-        color #000
-        font-size 13px
-        line-height 1em 
+    margin 5px 0 0px 0
+    padding-left 25px
+    @media (min-width 390px)
+        padding-left 34px
+    &__title
+        font-size 10px
+        color #272727
+        line-height 1.1em
+        // padding 0 3px
+        margin 4px 0 0 0
+        //text-align center
+        width 100%
         font-weight 500
-        text-decoration none
-        // @media (min-width 390px)
-        //     font-size 14px
+        display none
+        @media (min-width 390px)
+            display block
+    &__button
+        display inline-block
+        margin 0 5px
+        width 22px
+        height 22px
+        background-size 85% !important
+        position relative
+        cursor pointer
+        border-radius 40px
+        @media (min-width 390px)
+            width 25px
+            height 25px
+        &_whatsapp
+            background #57d163 url(../images/whatsapp.svg) 50% no-repeat
+        &_viber
+            background #665cac url(../images/viber.svg) 50% no-repeat
+        &_telegram
+            background #2ca8dd url(../images/telegram.svg) 50% no-repeat
+        &_vk
+            background #4a76a8 url(../images/vk.svg) 50% no-repeat
+
+// .whatsapp
+//     display block
+//     width max-content
+//     margin-top 5px
+//     cursor pointer
+//     text-decoration none
+//     &__wrap
+//         display flex
+//         align-items center
+//         background-color rgb(225, 239, 208)
+//         padding 3px 4px 
+//         border-radius 4px
+//     //margin-bottom 10px
+//     &__icon
+//         width 15px
+//         height 15px
+//         background-image url(../images/whatsapp.svg)
+//         background-repeat no-repeat
+//         background-size contain
+//         margin 0 4px 0 0
+//         // @media (min-width 390px)
+//         //     margin 0 10px 0 0
+//     &__text
+//         display inline-block
+//         color #000
+//         font-size 13px
+//         line-height 1em 
+//         font-weight 500
+//         text-decoration none
+//         // @media (min-width 390px)
+//         //     font-size 14px
 
 
 .maps
@@ -2096,8 +2141,8 @@ ul.list
 
 .modal-open
     overflow hidden
-    .page__main
-        filter blur(3px)
+    // .page__main
+    //     filter blur(3px)
         
 .main
     // transition filter 10ms
@@ -2105,8 +2150,8 @@ ul.list
     position relative
     filter none
     transition filter 300ms 0ms
-    &_blur
-        filter blur(3px)
+    //&_blur
+        //filter blur(3px)
         //box-shadow inset 0 0 6px #ddd 
         //&:before //.fixed_blur
             //transition opacity 100ms 0ms, visibility 0ms 200ms
