--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -13,7 +13,7 @@ block content
                             +e.plank
                         +b.logo
                             +e.image
-                            +e.description Проектно-строительная<br>компания
+                            +e.description ИНВЕСТИЦИОННО СТРОИТЕЛЬНАЯ КОМПАНИЯ
                     .header__center
                         
                         //- +b.messengers
