--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -3923,3 +3923,54 @@ _padding($d)
         color #000
         display inline-block
 
+
+// .installment
+//     // @media (min-width 1160px)
+//     //     right 50px 
+//     //     top 30px
+//     margin 20px auto
+//     padding 10px
+//     width 200px
+//     height 200px
+//     background #e7c88f
+//     display flex
+//     align-items center
+//     justify-content center
+//     flex-direction column
+//     @media (min-width 1160px)
+//         position absolute
+//         right 50px 
+//         top 30px
+//     // box-shadow 0 0 0px 4px #fff
+//     border-radius 100%
+//     &__title
+//         text-align center
+//         font-size 20px
+//         color #000
+//         line-height 1.2em
+//         margin-bottom 15px
+//         font-weight 800
+//         text-transform uppercase
+//         @media (min-width 1160px)
+//             font-size 30px
+//             margin-bottom 5px
+//     &__item-title
+//         font-size 20px
+//         color #000
+//         line-height 1em
+//         font-weight 600
+//         @media (min-width 1160px)
+//             font-size 25px
+//             margin-bottom 5px
+//     &__item
+//         text-transform uppercase
+//         line-height 1.1em
+//         font-size 10px
+//         text-align center
+//         font-weight 600
+//         width 100%
+//         width calc(33.333333333333336% - 20px)
+//         margin-bottom 10px
+//         // @media (min-width 1160px)
+//         //     width calc(33.333333333333336% - 20px)
+
