--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -95,6 +95,8 @@ block content
                             +e({tag: 'a'})( href="viber://pa?chatURI=bkinventbot", target="_blank").button.messengers__button_viber
                             +e({tag: 'a'})( href="tg://resolve?domain=BKInventBot", target="_blank").button.messengers__button_telegram
                             +e({tag: 'a'})( href="https://vk.me/-151917740", target="_blank").button.messengers__button_vk
+                            //+e({tag: 'a'})( href="https://vk.me/-151917740", target="_blank").button.messengers__button_fb
+                            +e({tag: 'a'})( href="https://www.instagram.com/group_bk_invent", target="_blank").button.messengers__button_instagram
                             +e.title Напишите нам в мессенджер
                         //- +b.maps
                         //-     +e.wrap
@@ -1786,6 +1788,11 @@ block content
                 .close.modal__close
                 .modal__title ----
     
+
+
+
+
+
     .modal.modal_type_zoom#modal__first-vizit
         .modal__wrapper
             .modal__dialog.vi
