--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -590,9 +590,9 @@
     display block
     width max-content
     margin 5px 0 0px 0
-    padding-left 25px
-    @media (min-width 390px)
-        padding-left 34px
+    //padding-left 25px
+    // @media (min-width 390px)
+    //     padding-left 34px
     &__title
         font-size 10px
         color #272727
@@ -607,7 +607,7 @@
             display block
     &__button
         display inline-block
-        margin 0 5px
+        margin 0 2px
         width 22px
         height 22px
         background-size 85% !important
@@ -625,6 +625,10 @@
             background #2ca8dd url(../images/telegram.svg) 50% no-repeat
         &_vk
             background #4a76a8 url(../images/vk.svg) 50% no-repeat
+        &_fb
+            background #0281ff url(../images/fb.svg) 50% no-repeat
+        &_instagram
+            background #e1286f url(../images/instagram.svg) 50% no-repeat
 
 // .whatsapp
 //     display block
