--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -920,6 +920,18 @@ block content
         
     //- ////////////////////
 
+    .modal#modal-main-page
+        .modal__wrapper
+            .modal__dialog
+                .close.modal__close
+                .modal__title ----
+                .drum
+                .btn.btn_view_action.drum-run
+                    .btn__text КРУТИТЬ
+                .drum-arrow
+
+
+
     .modal#modal__order
         .modal__wrapper
             .modal__dialog
