--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -553,6 +553,25 @@ block content
 
                 section.container
 
+                    +b.blog
+                        +e.item
+                            a(href="fd")
+                                +e.box(style="background-image: url(https://bk-invent.ru/uploads/images/articles/o1265_min.jpg)")
+                                    +e.title Для чего мы используем телеинспекцию и что это такое?
+                                    +e.data 10112020
+                                    +e.docviews 65
+                        +e.item
+                            +e.box(style="background-image: url(https://bk-invent.ru/uploads/images/articles/mmas321_12.jpg)")
+                        +e.item 
+                            +e.box
+                        +e.item.blog__item_big
+                            +e.box(style="background-image: url(https://bk-invent.ru/uploads/images/articles/842231121.jpg)")
+                                +e.title Для чего мы используем телеинспекцию и что это такое?
+                                +e.data 12 января 2021 г.
+                                +e.docviews 65
+                        +e.item
+                            +e.box
+
                     .btn(data-quiz="modal__quiz1").run-quiz.btn_view_action
                         .btn__text Пройти опрос!
 
