--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -1012,7 +1012,7 @@ ul.list
         
     img
         margin-right 10px
-    @media (min-width 550px)
+    @media (min-width 830px)
         .container
             display flex
             //align-items center
@@ -3977,4 +3977,122 @@ _padding($d)
 //         margin-bottom 10px
 //         // @media (min-width 1160px)
 //         //     width calc(33.333333333333336% - 20px)
+
+
+// .drum
+//     width 500px 
+//     height 500px 
+//     border-radius 100%
+//     background #ddd
+//     transition all 1s linear
+//     background url(https://masterpaninpark.ru/wp-content/uploads/2019/03/car_wheel_PNG23316.png)
+//     background-size: 500px
+
+// .drum-arrow
+//     width 60px
+//     height 60px
+//     border-top 10px solid #6E18C0
+//     border-right 10px solid #6E18C0
+//     margin-right 60px
+//     display none
+//     transform rotate(-45deg)
+//     margin 18px auto
+
+$blog_columns = 12
+$blog_atom = (100% / $blog_columns)
+$blog_offset = 20px
+$blog_offset_one_side = ($blog_offset / 2)
+
+blog_size($n)
+    $val = 100% / $blog_columns * $n
+    width "calc(%s - %s)" % ($val $blog_offset)
+
+.blog
+    display flex
+    flex-wrap wrap
+    margin-left ($blog_offset_one_side * -1)
+    margin-right ($blog_offset_one_side * -1)
+    margin-top 30px 
+    margin-bottom 30px 
+    &__item
+        box-sizing border-box
+        word-wrap break-word
+        margin $blog_offset_one_side
+        blog_size(12)
+        cursor pointer
+
+        @media (min-width 780px)
+            blog_size(6)
+            &_big
+                blog_size(6)
+
+        @media (min-width 960px)
+            blog_size(4)
+            &_big
+                blog_size(8)
+
+    &__box 
+        position relative
+        width 100%
+        border 1px solid #f4f4f4
+        border-radius 4px
+        background-color #fff
+        background-position center
+        box-shadow 0 5px 20px 0 rgba(92,92,92,.1)
+        transition all .4s ease 0s
+        top 0
+        height 320px 
+        background-size cover
+
+        // &:after
+        //     content ""
+        //     position absolute
+        //     height 100%
+        //     left 0
+        //     top 0
+        //     width 100%
+        //     opacity 0
+        //     background-color #000
+
+    &__title
+        box-sizing border-box
+        position absolute
+        top 50%
+        left 0
+        width 100%
+        padding 20px 
+        transform translate(0, -50%)
+        font-size 22px
+        color #fff
+        text-align center
+        background #0000007d
+        font-weight 700
+    &__data
+        box-sizing border-box
+        position absolute
+        color #000
+        bottom 10px
+        right 10px
+        font-size 14px
+        border-radius 4px
+        padding 1px 5px
+        background-color #fffc
+
+    &__docviews
+        color #000
+        box-sizing border-box
+        position absolute
+        bottom 10px
+        left 10px
+        font-size 14px
+        background-color #fffc
+        background-image url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='iso-8859-1'%3F%3E%3C!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0) --%3E%3Csvg version='1.1' id='Capa_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 512.008 512.008' style='enable-background:new 0 0 512.008 512.008;' xml:space='preserve'%3E%3Cg%3E%3Cg%3E%3Cpath d='M510.112,249.924c-4.032-5.845-100.928-143.253-254.101-143.253c-131.435,0-248.555,136.619-253.483,142.443 c-3.371,3.968-3.371,9.792,0,13.781c4.928,5.824,122.048,142.443,253.483,142.443s248.555-136.619,253.483-142.443 C512.587,259.204,512.864,253.892,510.112,249.924z M256.011,341.337c-47.061,0-85.333-38.272-85.333-85.333 s38.272-85.333,85.333-85.333s85.333,38.272,85.333,85.333S303.072,341.337,256.011,341.337z'/%3E%3C/g%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3C/svg%3E%0A")
+        background-repeat no-repeat
+        padding 1px 5px 1px 27px
+        background-size 18px
+        background-position 4px center
+        border-radius 4px
+
+
+
 
